server/packaging/k8s/overlays/netcup/patch-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cb8-postgres
  namespace: cb8
spec:
  template:
    spec:
      nodeSelector: null
