server/packaging/k8s/overlays/netcup/patch-cb8-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cb8
  namespace: cb8
spec:
  type: ClusterIP
